<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewMoster"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:elevation="5dp"
                android:foregroundGravity="center_vertical"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_btn_atras" />

            <androidx.cardview.widget.CardView
                android:id="@+id/contenedorImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recylcerViewImgMonster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center" />


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayoutLevel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/bordes_contenedor"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:gravity="bottom"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">

                <TextView
                    android:id="@+id/textViewLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:textColor="@color/red_100"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLimited"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:background="@drawable/bordes_contenedor"
                android:backgroundTint="@color/red_100"
                android:elevation="3dp"
                android:visibility="gone"
                android:gravity="bottom"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1">

                <TextView
                    android:id="@+id/textViewLimited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayoutContainerInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetailCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="@string/tvDetailMoster"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/id"
                style="@style/textViewMonster"
                android:text="@string/tvId"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailCart"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/textViewId"
                style="@style/textViewValueValueMonster"
                app:layout_constraintBottom_toBottomOf="@+id/id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/id"
                app:layout_constraintTop_toTopOf="@+id/id" />

            <TextView
                android:id="@+id/name"
                style="@style/textViewMonster"
                android:text="@string/tvName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/textViewName"
                style="@style/textViewValueValueMonster"
                app:layout_constraintBottom_toBottomOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/textViewId" />


            <TextView
                android:id="@+id/race"
                style="@style/textViewMonster"
                android:text="@string/tvRaza"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/textViewRace"
                style="@style/textViewValueValueMonster"
                app:layout_constraintBottom_toBottomOf="@+id/race"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/race"
                app:layout_constraintTop_toTopOf="@+id/race" />


            <TextView
                android:id="@+id/archetype"
                style="@style/textViewMonster"
                android:text="@string/tvArchetype"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/race"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/texteViewArchetype"
                style="@style/textViewValueValueMonster"
                app:layout_constraintBottom_toBottomOf="@+id/archetype"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/archetype"
                app:layout_constraintTop_toTopOf="@+id/archetype" />

            <TextView
                android:id="@+id/defending"
                style="@style/textViewMonster"
                android:text="@string/tvDefending"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/archetype"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/texteViewdefending"
                style="@style/textViewValueValueMonster"
                app:layout_constraintBottom_toBottomOf="@+id/defending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/defending"
                app:layout_constraintTop_toTopOf="@+id/defending" />

            <TextView
                android:id="@+id/stroke"
                style="@style/textViewMonster"
                android:text="@string/tvStroke"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/defending"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/texteViewStroke"
                style="@style/textViewValueValueMonster"
                app:layout_constraintBottom_toBottomOf="@+id/stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/stroke"
                app:layout_constraintTop_toTopOf="@+id/stroke" />



            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stroke"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>